--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,6 +1,6 @@
 <div class="quizz_container">
     <div class="quizz_logo">
-        <img src="assets/imags/logo.png" alt="">
+        <img src="assets/imgs/logo.png" alt="">
         <h3>{{title}}</h3>
     </div>
     <div *ngIf=!finished class="quizz_questions">
